# pyorderbook

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
examples/: display_order_book.py
pyorderbook/binance/: orderbook.py
tests/: test_orderbook.py
